2015-10-20 Gregory L. Lee <lee218@llnl.gov>
	* : added stat type attribute to .dot files

2015-10-19 Gregory L. Lee <lee218@llnl.gov>
	* : bug fixes to resolve compiler warnings

2015-10-15 Gregory L. Lee <lee218@llnl.gov>
	* : integrated with graphlib 3 API
	* : added node and edge attributes to STAT graphs

2015-09-11 Gregory L. Lee <lee218@llnl.gov>
	* probe_be.cpp : fixed awaitingActions decrementating
	* err.cpp : flush file handle

2015-09-11 Gregory L. Lee <lee218@llnl.gov>
	* err.cpp : flush file handle

2015-09-09 Gregory L. Lee <lee218@llnl.gov>
	* probe_be.cpp : fixed awaitingActions decrementing

2015-09-09 Gregory L. Lee <lee218@llnl.gov>
	* : allow passing of argc and argv to probe sessions (Jira STAT-17)

2015-08-24 Gregory L. Lee <lee218@llnl.gov>
	* : don't replicate "prepare" of Actions when reused

2015-08-24 Jesper Nielsen
	* probe_be.cpp : decrement awaitingActions count for each action

2015-08-11 Jesper Nielsen
	* backend.cpp : modified handleTimerActions to avoid mutex deadlock

2015-07-28 Gregory L. Lee <lee218@llnl.gov>, Jesper Nielsen
	* : added DySectAPI probe tree visualizer
	* : DySectAPI FE create .dot file with probe tree

2015-07-22 Gregory L. Lee <lee218@llnl.gov>
	* : Created mock DynInst header file for FE
	* : Some cleaning of header files and includes

2015-07-10 Gregory L. Lee <lee218@llnl.gov>
	* err.[C,h] : better control of DySectAPI verbosity and logging

2015-07-10 Gregory L. Lee <lee218@llnl.gov>
	* : DySectAPI filter function should only merge packets with same tag

2015-07-08 Gregory L. Lee <lee218@llnl.gov>
	* : DySectAPI filter should process messages in received order

2015-07-02 Gregory L. Lee <lee218@llnl.gov>
	* : Fixes for probes pending library load

2015-07-01 Gregory L. Lee <lee218@llnl.gov>
	* STAT_FrontEnd : FGFS recv only on expected streams, not all streams

2015-06-15 Gregory L. Lee <lee218@llnl.gov>
	* action* : added Null Action