@@ -6,12 +6,12 @@ AC_DEFUN([X_AC_DEBUGLIBS], [
      LDFLAGS="$LDFLAGS -L/usr/lib64/dyninst"
      RPATH_FLAGS="$RPATH_FLAGS -Wl,-rpath=/usr/lib64/dyninst"],
     [CXXFLAGS="$CXXFLAGS"]
-  )  
+  )
   AC_ARG_ENABLE(libdwarf-rpm,
     [AS_HELP_STRING([--enable-libdwarf-rpm],[Enable the use of rpm-installed libdwarf, default=no])],
     [CXXFLAGS="$CXXFLAGS -I/usr/include/libdwarf"],
     [CXXFLAGS="$CXXFLAGS"]
-  )  
+  )
 
   AC_ARG_WITH(stackwalker,
     [AS_HELP_STRING([--with-stackwalker=prefix],
@@ -22,13 +22,33 @@ AC_DEFUN([X_AC_DEBUGLIBS], [
      RPATH_FLAGS="$RPATH_FLAGS -Wl,-rpath=${withval}/lib"],
     [CXXFLAGS="$CXXFLAGS"]
   )
-  AC_ARG_WITH(libdwarf, 
-    [AS_HELP_STRING([--with-libdwarf=prefix],  
+  AC_ARG_WITH(libdwarf,
+    [AS_HELP_STRING([--with-libdwarf=prefix],
       [Add the compile and link search paths for libdwarf]
     )],
     [CXXFLAGS="$CXXFLAGS -I${withval}/include"
      LDFLAGS="$LDFLAGS -L${withval}/lib"
      RPATH_FLAGS="$RPATH_FLAGS -Wl,-rpath=${withval}/lib"],
+    [CXXFLAGS="$CXXFLAGS"]
+  )
+  AC_ARG_WITH(ompd,
+    [AS_HELP_STRING([--with-ompd=prefix],
+      [Add the compile and link search paths for ompd]
+    )],
+    [CXXFLAGS="$CXXFLAGS -I${withval}/include"
+     LDFLAGS="$LDFLAGS -L${withval}/lib"
+     RPATH_FLAGS="$RPATH_FLAGS -Wl,-rpath=${withval}/lib"],
+    [CXXFLAGS="$CXXFLAGS"]
+  )
+  AM_CONDITIONAL([ENABLE_OPENMP], false)
+  AC_ARG_WITH(omp-stackwalker,
+    [AS_HELP_STRING([--with-omp-stackwalker=prefix],
+      [Add the compile and link search paths for openmp stack walker. Must have --with-stackwalker and --with-ompd defined]
+    )],
+    [CXXFLAGS="$CXXFLAGS -I${withval}/include -DOMP_STACKWALKER"
+     LDFLAGS="$LDFLAGS -L${withval}/lib"
+     RPATH_FLAGS="$RPATH_FLAGS -Wl,-rpath=${withval}/lib"
+     AM_CONDITIONAL([ENABLE_OPENMP], true)],
     [CXXFLAGS="$CXXFLAGS"]
   )
 
@@ -88,5 +108,34 @@ AC_DEFUN([X_AC_DEBUGLIBS], [
     fi
   fi
   AC_MSG_RESULT($libstackwalk_found)
+
+  AC_MSG_CHECKING(for libompd_intel)
+  TMP_LDFLAGS=$LDFLAGS
+  LDFLAGS="$LDFLAGS -lompd_intel"
+  AC_LINK_IFELSE([AC_LANG_PROGRAM(#include "ompd.h"
+    ompd_callbacks_t *table;)],
+    [libompd_found=yes],
+    [libompd_found=no]
+  )
+  LDFLAGS=$TMP_LDFLAGS
+  if test "$libompd_found" = yes; then
+    BELIBS="-lompd_intel $BELIBS"
+  fi
+  AC_MSG_RESULT($libompd_found)
+
+  AC_MSG_CHECKING(for libomp_stackwalker)
+  TMP_LDFLAGS=$LDFLAGS
+  LDFLAGS="$LDFLAGS -lomp_stackwalker $BELIBS"
+  AC_LINK_IFELSE([AC_LANG_PROGRAM(#include "OpenMPStackWalker.h"
+    OpenMPStackWalker* walker;)],
+    [libomp_stackwalker_found=yes],
+    [libomp_stackwalker_found=no]
+  )
+  LDFLAGS=$TMP_LDFLAGS
+  if test "$libomp_stackwalker_found" = yes; then
+    BELIBS="-lomp_stackwalker $BELIBS"
+  fi
+  AC_MSG_RESULT($libomp_stackwalker_found)
+
   AC_LANG_POP(C++)
 ])
