@@ -1,3 +1,6 @@
+2015-10-23 Gregory L. Lee <lee218@llnl.gov>
+	* : added OpenMP OMPD support (prototype from Lai Wei)
+
 2015-10-20 Gregory L. Lee <lee218@llnl.gov>
 	* : added stat type attribute to .dot files
 
